# Correlations

./: 16740672650984_ussr_R52_Object_261_westfeld.wotreplay  CMakeLists.txt  README.MD  compilation.txt  correlator.cpp  data.txt  data_rand.txt  data_sin.txt  exctractor.cpp  extract.hpp  filter.cpp  gen.txt  json.hpp  main.cpp  rand_events.cpp  rand_numbers.cpp  replayinfo.txt  replayinfo1.txt  result_rand.txt  result_sin.txt
tests/: 16759618590313_germany_G121_Grille_15_L63_lost_city_ctf.wotreplay  16760582017331_czech_Cz17_Vz_55_westfeld.wotreplay  data.txt  replayinfo.txt
